--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -46,3 +46,9 @@
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
+
+@media only screen and (max-width: 600px) {
+  table {
+    font-size: 8px;
+  }
+}
